tests/baselines/reference/tsxReactEmitWhitespace2.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== file.tsx (1 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    // Emit ' word' in the last string
    <div>word <code>code</code> word</div>;
    // Same here
    <div><code>code</code> word</div>;
    // And here
    <div><code /> word</div>;
    
    